# Gtk4_demos

./: README.md  dropdown.c  main.c
Adw.Toast/: adwaita_app  main.c
AdwEntry Suggestion /: main  main.c  main.vala
Adw_builder/: adwaita_app  main.c  ui.ui
CheckButton/: a.out  checkbutton1.c  checkbutton2.c  radioButton.c
ColumnView/: ColumnView1.c  ColumnView2.c  a.out
Dialog/: dialog.c  dialog1.out  dialog2.c  dialog2.out
Dropdown/: Dropdown1  Dropdown2  Dropdown3  Dropdown_1.c  Dropdown_2.c  Dropdown_3.c  build.sh  main.c
Ejemplo de meson/data/: builder.ui
Ejemplo de meson/src/: main.c
Example_App_Blueprint/data/: gresource.xml  meson.build
Example_App_Blueprint/src/: main.c
Example_App_UI/data/: gresource.xml
Example_App_UI/src/: main.c
Expander Ping/: a.out  main.c
Gtk.FlowBox/: a.out  main.c
Gtk.HeaderBar/: a.out  main.c
Gtk.Window/: main.c
GtkFrame Ping/: main.c  ping1.out  ping2.c  ping2.out
Nueva Ventana y cerrarla/: a.out
Ping/: a.out  ping.c  ping2.c
SearchEntry/: a.out  main.c
Time/: adwaita_app  main.c
Widgets Globales/: adwaita_app  main  main.c  main2.c
app_base_Adwaita/: README.md  a.out  main.c
app_base_gtk4/: README.md  a.out  main.c
app_base_meson/: README.md  meson.build
app_base_meson/data/: builder.ui  gresource.xml
app_base_meson/src/: main.c  meson.build
demo/: README.md  a.out  adwaita_app  file.ui  gresouce.xml  main.c  meson.build  resources.gresource  resources.gresource.c  ui_file.ui
demo/data/: builder.ui  gresource.xml  meson.build
demo/demo2/: adwaita_app  main.c
demo/src/: main.c
(+4 files in other folders)
